fixato alcune cose, aggiunto style su visible

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -41,3 +41,18 @@ button.standard-button{
         color: $primary-color;
     }
 }
+
+svg{
+    width: 30px;
+}
+
+label{
+    cursor: pointer;
+}
+
+input#visible:checked ~ label.visible{
+    fill: green;
+}
+input#not-visible:checked ~ label.not-visible{
+    fill: red;
+}
